# fundprint-data

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: README.md  architecture.md  cross-repo.md  ingestion.md  publication.md  resolution.md  schema.md  validation.md
samples/: 7d902ed3-fe0f-4cfc-971d-7ab6f70d23ea.json  8afba254-3e3e-49a2-9f2c-53b2c5a7e7d6.json  verify_3bf05f0a.json  verify_55695756.json  verify_d29bf372.json  verify_d29bf372r2.json
schema/: 20250510_001_initial_schema.sql
scripts/: backfill_directory_corroboration.py  backfill_registry_freshness.py  build_platform_denominator.py  build_validation_html.py  build_verification_html.py  build_verification_sample.py  build_zcta_centroids.py  check_db.py  compute_market_share.py  correct_cross_brand_sites.py  correct_directory_contradicted.py  correct_duplicate_sites.py  correct_family_building_dupes.py  correct_geode_out_of_scope.py  correct_kind_owner_reattribution.py  correct_non_clinic_locations.py  correct_stale_ghost_clinics.py  correct_unsplit_addresses.py  correct_woven_care_overcapture.py  create_dashboard_views.py  export_dashboard_snapshot.py  export_for_validation.py  ingest_card_history.py  ingest_fixture.py  review_sample.py  run_acquire.py  run_acquire_curated.py  run_acquire_directory.py  run_acquire_nppes_brands.py  run_acquire_nppes_bulk.py  run_acquire_roster.py  run_bluesprig_family.py  run_publish.py  run_resolve.py  run_resolve_portfolio.py  run_validate.py  score_verification.py  show_dataset.py
supabase/: config.toml
tests/: conftest.py  test_cross_brand_sites.py  (+2 more)
(+72 files in other folders)
