[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fundprint"
version = "0.1.0"
description = "Pipeline tracking PE ownership of US ABA / autism therapy clinics"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "anthropic>=0.30",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fundprint"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
